주석 업데이트

--- a/activation_function.ipynb
+++ b/activation_function.ipynb
@@ -6,7 +6,7 @@
       "name": "activation_function.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOgKTFxBgFV0vG8SZpfuAoq"
+      "authorship_tag": "ABX9TyNa1eU7FvR1YqepgTOlLlBQ"
     },
     "kernelspec": {
       "name": "python3",
@@ -42,13 +42,22 @@
       },
       "source": [
         "def sigmoid(x):\r\n",
-        "    return 1 / (1 + np.exp(-x)) \r\n",
-        "    ''' e의 x승을 구하는 지수함수이다. \r\n",
-        "    e는 자연상수임. x값이 0으로부터 음수 방향으로 멀어지면 분모(1 + np.exp(-x))의 값이 커지므로 y값은 0에 가까워진다. \r\n",
-        "    x값이 0으로부터 양수 방향으로 멀어지면 exp(-x)가 0에 가까워지므로 y값은 1에 가까워진다.'''"
+        "    return 1 / (1 + np.exp(-x)) # [1] "
       ],
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eoMtdWXOOQ8y"
+      },
+      "source": [
+        "[1] e<sup>x</sup>을 구하는 지수함수이다. \r\n",
+        "e는 자연상수임. <p>\r\n",
+        "x값이 0으로부터 음수 방향으로 멀어지면 분모(1 + np.exp(-x))의 값이 커지므로 y값은 0에 가까워진다. \r\n",
+        "x값이 0으로부터 양수 방향으로 멀어지면 exp(-x)가 0에 가까워지므로 y값은 1에 가까워진다."
+      ]
     },
     {
       "cell_type": "code",
@@ -56,13 +65,21 @@
         "id": "BZQXnVflNt_x"
       },
       "source": [
-        "x = np.arange(-10, 10, 0.1)\r\n",
-        "''' x값으로 -10부터 9.9까지 0.1간격의 소수로 이루어진 배열을 준비한다.\r\n",
-        "-1.00000000e + n은 -1.00000000 * 10의 n승을 의미하므로, x의 첫번째 수 -1.00000000e + 01은 -1.00000000 * 10의 1승이 되어 -10을 나타낸다.'''\r\n",
+        "x = np.arange(-10, 10, 0.1) # [2]\r\n",
         "y = sigmoid(x)"
       ],
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0zzwGtvgO9DH"
+      },
+      "source": [
+        "[2] x값으로 -10부터 9.9까지 0.1간격의 소수로 이루어진 배열을 준비한다.\r\n",
+        "-1.00000000e + n은 -1.00000000 * 10<sup>n</sup>승을 의미하므로, x의 첫번째 수 -1.00000000e + 01은 -1.00000000 * 10<sup>1</sup>이 되어 -10을 나타낸다."
+      ]
     },
     {
       "cell_type": "code",
@@ -151,7 +168,7 @@
         "id": "amqDgPh-Njvg"
       },
       "source": [
-        "소프트맥스 함수에 의해 출력되는 값은 각각 0 ~ 1 범위에 있으며 가장 큰 출력값을 부여받은 클래스로 분류될 확률이 가장 높다. 전체 출력값의 합계는 항상 '1' 이다. 위에 결과는 2에 대항하는 클래스로 분류될 확률이 57%로 가장 높다."
+        "[3] softmax 함수에 의해 출력되는 값은 각각 0 ~ 1 범위에 있으며 가장 큰 출력값을 부여받은 클래스로 분류될 확률이 가장 높다. 전체 출력값의 합계는 항상 '1' 이다. 위에 결과는 2에 대항하는 클래스로 분류될 확률이 57%로 가장 높다."
       ]
     }
   ]
