마크다운 업데이트

--- a/activation_function.ipynb
+++ b/activation_function.ipynb
@@ -6,7 +6,7 @@
       "name": "activation_function.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO0EYq+X6abClqZw0/7/UNy"
+      "authorship_tag": "ABX9TyMU+jXBioA2ZauNrdZF94pr"
     },
     "kernelspec": {
       "name": "python3",
@@ -78,7 +78,7 @@
       },
       "source": [
         "[2] x값으로 -10부터 9.9까지 0.1간격의 소수로 이루어진 배열을 준비한다. <p>\r\n",
-        "-1.00000000e + n은 -1.00000000 * 10<sup>n</sup>승을 의미하므로, <p>x의 첫번째 수 -1.00000000e + 01은 -1.00000000 * 10<sup>1</sup>이 되어 -10을 나타낸다."
+        "-1.00000000e + n은 -1.00000000 \\* 10<sup>n</sup>을 의미하므로, <p> x의 첫번째 수 -1.00000000e + 01은 -1.00000000 \\* 10<sup>1</sup>이 되어 -10을 나타낸다."
       ]
     },
     {
@@ -144,7 +144,7 @@
         "outputId": "68ec38c5-d141-4965-ca2e-2a457bbf5eaa"
       },
       "source": [
-        "softmax([1, 1, 2])"
+        "softmax([1, 1, 2]) # [3]"
       ],
       "execution_count": 13,
       "outputs": [
