--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -6,6 +6,7 @@
       "name": "preprocess.ipynb",
       "private_outputs": true,
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyP9T6FM2D6CQlNACDTRL8ey"
     },
     "kernelspec": {
