--- a/FinanceDataReader.ipynb
+++ b/FinanceDataReader.ipynb
@@ -6,7 +6,7 @@
       "name": "FinanceDataReader.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN9h4B/Wo5QrRDuspwpCjpj"
+      "authorship_tag": "ABX9TyN8WrZcA54uSFPWzOW/spQy"
     },
     "kernelspec": {
       "name": "python3",
@@ -87,41 +87,42 @@
         "import FinanceDataReader as fdr\n",
         "import datetime\n",
         "\n",
-        "# 오늘 날짜\n",
-        "now = datetime.datetime.now() \n",
-        "nowDate = now.strftime('%Y-%m-%d')\n",
+        "def BollingerBand():\n",
+        "    \n",
+        "    # 오늘 날짜\n",
+        "    now = datetime.datetime.now() \n",
+        "    nowDate = now.strftime('%Y-%m-%d')\n",
         "\n",
-        "# 긁어오기'cj cgv : 079160', 'jyp 035900'\n",
-        "re_list = []\n",
-        "num = input('종목넘버:')\n",
-        "re_list.append(num)\n",
-        "for s in re_list:\n",
-        "     globals()['df_{}'.format(s)] = fdr.DataReader(s, '2021')\n",
-        "    #  globals()['df_{}'.format(s)] = globals()['df_{}'.format(s)].sort_index(ascending = False) # 내림차순\n",
+        "    # 긁어오기'cj cgv : 079160', 'jyp 035900'\n",
+        "    re_list = []\n",
+        "    num = input('종목넘버:')\n",
+        "    re_list.append(num)\n",
+        "    for s in re_list:\n",
+        "        globals()['df_{}'.format(s)] = fdr.DataReader(s, '2021')\n",
+        "        #  globals()['df_{}'.format(s)] = globals()['df_{}'.format(s)].sort_index(ascending = False) # 내림차순\n",
         "\n",
-        "     idx_nm_1 = globals()['df_{}'.format(s)][globals()['df_{}'.format(s)].index == nowDate].index\n",
-        "     globals()['df_{}'.format(s)] = globals()['df_{}'.format(s)].drop(idx_nm_1)\n",
-        "    #  globals()['df_{}'.format(s)] = globals()['df_{}'.format(s)].head(20) # 주가의 20일 이동 평균선을 기준으로 하기 때문에 20개 종가를 이용\n",
+        "        idx_nm_1 = globals()['df_{}'.format(s)][globals()['df_{}'.format(s)].index == nowDate].index\n",
+        "        globals()['df_{}'.format(s)] = globals()['df_{}'.format(s)].drop(idx_nm_1)\n",
+        "        #  globals()['df_{}'.format(s)] = globals()['df_{}'.format(s)].head(20) # 주가의 20일 이동 평균선을 기준으로 하기 때문에 20개 종가를 이용\n",
         "\n",
         "\n",
-        "globals()['df_{}'.format(s)]['MA20'] = globals()['df_{}'.format(s)]['Close'].rolling(window=20).mean()  # ①\n",
-        "globals()['df_{}'.format(s)]['stddev'] = globals()['df_{}'.format(s)]['Close'].rolling(window=20).std() # ②\n",
-        "globals()['df_{}'.format(s)]['upper'] = globals()['df_{}'.format(s)]['MA20'] + (globals()['df_{}'.format(s)]['stddev'] * 2)   # ③\n",
-        "globals()['df_{}'.format(s)]['lower'] = globals()['df_{}'.format(s)]['MA20'] - (globals()['df_{}'.format(s)]['stddev'] * 2)   # ④\n",
-        "globals()['df_{}'.format(s)]\n",
-        "globals()['df_{}'.format(s)] = globals()['df_{}'.format(s)][19:]  # ⑤\n",
+        "    globals()['df_{}'.format(s)]['MA20'] = globals()['df_{}'.format(s)]['Close'].rolling(window=20).mean()  # ①\n",
+        "    globals()['df_{}'.format(s)]['stddev'] = globals()['df_{}'.format(s)]['Close'].rolling(window=20).std() # ②\n",
+        "    globals()['df_{}'.format(s)]['upper'] = globals()['df_{}'.format(s)]['MA20'] + (globals()['df_{}'.format(s)]['stddev'] * 2)   # ③\n",
+        "    globals()['df_{}'.format(s)]['lower'] = globals()['df_{}'.format(s)]['MA20'] - (globals()['df_{}'.format(s)]['stddev'] * 2)   # ④\n",
+        "    globals()['df_{}'.format(s)]\n",
+        "    globals()['df_{}'.format(s)] = globals()['df_{}'.format(s)][19:]  # ⑤\n",
         "\n",
-        "plt.figure(figsize=(9, 5))\n",
-        "plt.plot(globals()['df_{}'.format(s)].index, globals()['df_{}'.format(s)]['Close'], color='#0000ff', label='Close')    # ⑥\n",
-        "plt.plot(globals()['df_{}'.format(s)].index, globals()['df_{}'.format(s)]['upper'], 'r--', label = 'Upper band')       # ⑦\n",
-        "plt.plot(globals()['df_{}'.format(s)].index, globals()['df_{}'.format(s)]['MA20'], 'k--', label='Moving average 20')\n",
-        "plt.plot(globals()['df_{}'.format(s)].index, globals()['df_{}'.format(s)]['lower'], 'c--', label = 'Lower band')\n",
-        "plt.fill_between(globals()['df_{}'.format(s)].index, globals()['df_{}'.format(s)]['upper'], globals()['df_{}'.format(s)]['lower'], color='0.9')  # ⑧ \n",
-        "plt.legend(loc='best')\n",
-        "plt.title('{} Bollinger Band (20 day, 2 std)'.format(s))\n",
-        "plt.xticks(rotation=45)\n",
-        "plt.show()\n",
-        "\n"
+        "    plt.figure(figsize=(9, 5))\n",
+        "    plt.plot(globals()['df_{}'.format(s)].index, globals()['df_{}'.format(s)]['Close'], color='#0000ff', label='Close')    # ⑥\n",
+        "    plt.plot(globals()['df_{}'.format(s)].index, globals()['df_{}'.format(s)]['upper'], 'r--', label = 'Upper band')       # ⑦\n",
+        "    plt.plot(globals()['df_{}'.format(s)].index, globals()['df_{}'.format(s)]['MA20'], 'k--', label='Moving average 20')\n",
+        "    plt.plot(globals()['df_{}'.format(s)].index, globals()['df_{}'.format(s)]['lower'], 'c--', label = 'Lower band')\n",
+        "    plt.fill_between(globals()['df_{}'.format(s)].index, globals()['df_{}'.format(s)]['upper'], globals()['df_{}'.format(s)]['lower'], color='0.9')  # ⑧ \n",
+        "    plt.legend(loc='best')\n",
+        "    plt.title('{} Bollinger Band (20 day, 2 std)'.format(s))\n",
+        "    plt.xticks(rotation=45)\n",
+        "    plt.show()"
       ],
       "execution_count": null,
       "outputs": []
@@ -146,6 +147,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "esbAPHgAMq0s"
+      },
+      "source": [
+        "BollingerBand()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W6d_YEQbPAs-"
       },
       "source": [
         ""
