--- a/FinanceDataReader.ipynb
+++ b/FinanceDataReader.ipynb
@@ -6,7 +6,7 @@
       "name": "FinanceDataReader.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOGoRGoOaddWQPOvyFRn4zj"
+      "authorship_tag": "ABX9TyMLxA9+n9rii8/Q26TxOYOy"
     },
     "kernelspec": {
       "name": "python3",
@@ -32,7 +32,7 @@
         "id": "OV84NAD4Uncd"
       },
       "source": [
-        "# pip install -U finance-datareader"
+        "pip install -U finance-datareader"
       ],
       "execution_count": null,
       "outputs": []
@@ -64,6 +64,7 @@
         "id": "NuUbwOrKXdWi"
       },
       "source": [
+        "import matplotlib.pyplot as plt\n",
         "import FinanceDataReader as fdr\n",
         "import datetime\n",
         "\n",
@@ -130,6 +131,17 @@
       },
       "source": [
         "BollingerBand()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D4VhLyCirPAr"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
