앱비밀번호마스킹

--- a/realtime_stock.ipynb
+++ b/realtime_stock.ipynb
@@ -6,7 +6,7 @@
       "name": "realtime_stock.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPBj1Map6DTdl/IJT2WI7oc"
+      "authorship_tag": "ABX9TyMPuN0zEFW6hGa9EaqUyj0c"
     },
     "kernelspec": {
       "name": "python3",
@@ -71,7 +71,7 @@
         "    clear_output()\n",
         "    price = []    \n",
         "    now = datetime.now()\n",
-        "    print('카')\n",
+        "    print('K')\n",
         "    print(get_price(\"035720\"), '----->',round(int(get_price(\"035720\").replace(',','')),2)-126500)\n",
         "\n",
         "    print('__________________________')\n",
@@ -92,7 +92,7 @@
         "        # TLS 보안 시작\n",
         "        s.starttls()\n",
         "        # 로그인 인증\n",
-        "        s.login('jsleestat@gmail.com', 'twwicypgbyzgodod')\n",
+        "        s.login('jsleestat@gmail.com', '앱비번')\n",
         "        # 보낼 메시지 설정\n",
         "        msg = MIMEText('내용 : 거래가{} .'.format(get_price(\"035720\")))\n",
         "        msg['Subject'] = '제목 : 거래가{}'.format(get_price(\"035720\"))\n",
@@ -113,33 +113,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mh1Anl6Q_ZX3"
-      },
-      "source": [
-        "import smtplib\n",
-        "from email.mime.text import MIMEText\n",
-        "\n",
-        "# 세션 생성\n",
-        "s = smtplib.SMTP('smtp.gmail.com', 587)\n",
-        "# TLS 보안 시작\n",
-        "s.starttls()\n",
-        "# 로그인 인증\n",
-        "s.login('jsleestat@gmail.com', 'twwicypgbyzgodod')\n",
-        "# 보낼 메시지 설정\n",
-        "msg = MIMEText('내용 : 본문내용 테스트입니다.')\n",
-        "msg['Subject'] = '제목 : 메일 보내기 테스트입니다.'\n",
-        "# 메일 보내기\n",
-        "s.sendmail(\"jsleestat@gmail.com\", \"fomet1277@naver.com\", msg.as_string())\n",
-        "# 세션 종료\n",
-        "s.quit()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YoojuTx0FWxt"
+        "id": "NlOKa9oMQT2i"
       },
       "source": [
         ""
